--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
   "name": "post1",
   "description": "Java webapp running on Tomcat",
   "repository": "https://github.com/ashuto/post1",
-  "website": "http://hiashu.webs.com/",
+  "website": "http://www.hiashu.webs.com/",
   "logo": "https://tomcat.apache.org/images/tomcat.png",
   "keywords": ["java", "tomcat"],
  
