--- a/app.json
+++ b/app.json
@@ -1,9 +1,9 @@
 {
-  "name": "post1",
-  "description": "Java webapp running on Tomcat",
+  "name": "Webapp Runner",
+  "description": "Java webapp running on Tomcat with sessions on Memcache",
   "repository": "https://github.com/ashuto/post1",
-  "website": "http://www.hiashu.webs.com/",
+  "website": "http://www.jamesward.com/2012/02/15/webapp-runner-apache-tomcat-as-a-dependency",
   "logo": "https://tomcat.apache.org/images/tomcat.png",
   "keywords": ["java", "tomcat"],
- 
+  "addons": ["memcachier"]
 }
