--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "name": "Webapp Runner",
+  "name": "post1",
   "description": "Java webapp running on Tomcat with sessions on Memcache",
   "repository": "https://github.com/ashuto/post1",
   "website": "http://www.jamesward.com/2012/02/15/webapp-runner-apache-tomcat-as-a-dependency",
