--- a/app.json
+++ b/app.json
@@ -3,7 +3,7 @@
   "description": "Java webapp running on Tomcat with sessions on Memcache",
   "repository": "https://github.com/ashuto/post1",
   "website": "http://www.jamesward.com/2012/02/15/webapp-runner-apache-tomcat-as-a-dependency",
-  "logo": "https://tomcat.apache.org/images/tomcat.png",
+  "logo": "https://lh6.googleusercontent.com/-sPxjvGAYiGQ/AAAAAAAAAAI/AAAAAAAAAAA/I0kJErZKhmA/photo.jpg",
   "keywords": ["java", "tomcat"],
   "addons": []
  }
